--- a/Back/Alpha_PHP/WS_phoenix-php/css/style.css
+++ b/Back/Alpha_PHP/WS_phoenix-php/css/style.css
@@ -4,3 +4,24 @@ header{
 footer{
     background:#75c9c8; 
 }
+img{
+    width: 100%;
+    height: 50%;
+}
+p{
+    font-size: .75rem;
+}
+h5{
+    font-size: 1rem;
+}
+.footer{
+    display: inline-block;
+    margin-right : 2%;
+    
+}
+a:hover{
+    text-decoration: none;
+}
+.image{
+    width: 25%;
+}
