--- a/Back/Alpha_PHP/WS_phoenix-php/css/style.css
+++ b/Back/Alpha_PHP/WS_phoenix-php/css/style.css
@@ -30,4 +30,7 @@ a:hover{
     margin: 0;
     border: .5px solid rgb(75, 71, 71);
     box-shadow: 2px 2px 2px rgba(51, 49, 49, 0.883);
-} 
+}
+.image2{
+    margin-left: 50px;
+}
