--- a/Back/SYMFONY/Boutique3/src/AppBundle/Resources/views/Produit/index.html.twig
+++ b/Back/SYMFONY/Boutique3/src/AppBundle/Resources/views/Produit/index.html.twig
@@ -1,1 +1,7 @@
-<h2>je suis dans la page d'accueil</h2>
+{% extends 'layout.html.twig' %}
+{% block title %} Boutique - Accueil {% endblock %}
+
+
+{% block content %}
+<h2>Je suis dans la page d'accueil</h2>
+{% endblock %}
