--- a/Back/SYMFONY/Boutique3/src/AppBundle/Resources/views/Admin/list_produit.html.twig
+++ b/Back/SYMFONY/Boutique3/src/AppBundle/Resources/views/Admin/list_produit.html.twig
@@ -1,8 +1,51 @@
 {% extends 'layout.html.twig' %}
-{% block title %} Boutique - Membre {% endblock %}
+{% block title %} Boutique - gestion Produit {% endblock %}
 
 {% block content %}
-<h2>je suis dans la page d'admin qui liste tous les produits.</h2>
+<h1>je suis dans la page d'admin qui liste tous les produits.</h1>
+<hr>
+
+ <table class="table table-bordered text-center mb-4">
+    <thead>
+        <tr>   
+            <th>Photo</th> 
+            <th>Id Produit </th> 
+            <th> Titre </th> 
+            <th>Description </th> 
+            <th> Taille </th> 
+            <th> Couleur </th> 
+            <th> Stock </th>
+            <th> Prix </th>
+            <th colspan="3"> Action </th>
+        </tr> 
+    </thead>
+    <tbody>
+        {% for pdt in produits %}
+        <tr>
+            
+            <td><img src="{{ asset('photo/' ~ pdt.photo) }}" height="80px"></td>
+            <td>{{ pdt.id }}</td>
+            <td>{{ pdt.titre }}</td>
+            <td>{{ pdt.description }}</td>
+            <td>{{ pdt.taille }}</td>
+            <td>{{ pdt.couleur }}</td>
+            {% if pdt.stock == 0  %}
+            <td class="text text-danger"><b>{{ pdt.stock }}</b></td>
+            {% elseif pdt.stock <= 20 %}
+            <td class="text text-warning"><b>{{ pdt.stock }}</b></td>
+            {% else %}
+            <td class="text text-success"><b>{{ pdt.stock }}</b></td>
+            {% endif %}
+            <td>{{ pdt.prix }}</td>
+            <td><a href ="{{ path('produit', {'id': pdt.id } ) }}" target="_blank"><i class="fas fa-eye"></i></a></td>
+            <td><a href ="class="test text-success"><i class="fas fa-edit"></i></a></td>
+            <td><a href ="{{ path('admin_produit_delete', {'id': pdt.id } ) }}" onclick="return confirm('Etes vous sur de vouloir supprimer ce produit ?');" " class="test text-danger"><i class="fas fa-trash"></i></a></td>
+                    
+        </tr>
+        {% endfor %}
+    </tbody> 
+</table>
+    
 {% endblock %}
 
 
