--- a/Back/SYMFONY/Boutique3/src/AppBundle/Resources/views/Produit/index.html.twig
+++ b/Back/SYMFONY/Boutique3/src/AppBundle/Resources/views/Produit/index.html.twig
@@ -3,13 +3,20 @@
 
 
 {% block content %}
+ {# {{ dump(categories) }}  #}
+
 <div class="col-lg-12 p-5">
 <!--  Menu des catégorie -->
 	<div class="col-lg-3">
-	
+	   <div class="list-group mb-4">
+	   	<a href="{{ path('homepage') }}" class="list-group-item text text-light bg-dark">Tous les produits</a>
+		   {% for cat in categories %}
+		   <a href="{{ path('categorie', {'cat' : cat.categorie}) }}" class="text-dark list-group-item text-center">{{ cat.categorie }} </a> 
+		   {% endfor %}
+			</div>
+
 	</div>
-
-
+	
 	<!-- Espace principal  -->
 	<div class="col-lg-9">
 		<div class="row">
@@ -17,7 +24,7 @@
 			<!-- Debut Vignette Produit -->
 			<div class="col-lg-4 col-md-6 mb-4">
 				<div class="card h-100">
-					<a href=""><img class="card-img-top" src="" alt=""></a>
+					<a href="{{ path('produit', {'id': pdt.id}) }}"><img class="card-img-top" src="{{ asset('photo/'~ pdt.photo) }}" alt=""></a>
 					<div class="card-body">
 					<h4 class="card-title text-center">
 						<a href="" class="alert-link text-dark"> {{ pdt.titre }} </a>
