--- a/Back/SYMFONY/Boutique3/src/AppBundle/Resources/views/Produit/show.html.twig
+++ b/Back/SYMFONY/Boutique3/src/AppBundle/Resources/views/Produit/show.html.twig
@@ -15,7 +15,7 @@ je suis dans la page du produit n°
 	<div class="col-lg-6 col-md-12 mx-auto form1">
 	<div class="card h-100">
 	   
-		<a href=""><img class="card-img-top" src="" alt=""></a>
+		<a href=""><img class="card-img-top" src="{{ asset('photo/' ~ produit.photo)}}" alt=""></a>
 	   
 		<div class="card-body text-center">
 		<h4 class="card-title text-center">
@@ -35,7 +35,7 @@ je suis dans la page du produit n°
 
         <hr>
 		<p class="card-text text-center">{{ produit.couleur }}</p><hr>
-		<a href=">" class="alert-link text-dark card-text"><i class="fas fa-angle-double-left"></i>&nbsp;&nbsp;retour vers la catégorie {{produit.categorie}}</a>
+		<a href="{{ path('categorie', {'cat': produit.categorie } ) }}" class="alert-link text-dark card-text"><i class="fas fa-angle-double-left"></i>&nbsp;&nbsp;retour vers la catégorie {{produit.categorie}}</a>
 		</div>
 		<div class="card-footer text-center">
 
