--- a/Back/SYMFONY/Boutique3/src/AppBundle/Resources/views/Membre/inscription.html.twig
+++ b/Back/SYMFONY/Boutique3/src/AppBundle/Resources/views/Membre/inscription.html.twig
@@ -2,5 +2,15 @@
 {% block title %} Boutique - inscription {% endblock %}
 
 {% block content %}
-<h2>je suis dans la page Inscription </h2>
+<h1>  {{ title}} &nbsp &nbsp &nbsp</h1><br>
+{{ form(membreForm) }}
 {% endblock %}
+
+
+
+
+
+
+
+
+
