--- a/Back/SYMFONY/Boutique3/src/AppBundle/Resources/views/Admin/list_produit.html.twig
+++ b/Back/SYMFONY/Boutique3/src/AppBundle/Resources/views/Admin/list_produit.html.twig
@@ -4,7 +4,9 @@
 {% block content %}
 <h1>je suis dans la page d'admin qui liste tous les produits.</h1>
 <hr>
-
+<div class="row m-4">
+        <a href="{{ path('admin_produit_add') }}" class="btn btn-primary">Ajouter un produit</a>
+    </div>
  <table class="table table-bordered text-center mb-4">
     <thead>
         <tr>   
@@ -38,8 +40,8 @@
             {% endif %}
             <td>{{ pdt.prix }}</td>
             <td><a href ="{{ path('produit', {'id': pdt.id } ) }}" target="_blank"><i class="fas fa-eye"></i></a></td>
-            <td><a href ="class="test text-success"><i class="fas fa-edit"></i></a></td>
-            <td><a href ="{{ path('admin_produit_delete', {'id': pdt.id } ) }}" onclick="return confirm('Etes vous sur de vouloir supprimer ce produit ?');" " class="test text-danger"><i class="fas fa-trash"></i></a></td>
+            <td><a href ="{{ path('admin_produit_update', {'id': pdt.id } ) }}" class="test text-success"><i class="fas fa-edit"></i></a></td>
+            <td><a href ="{{ path('admin_produit_delete', {'id': pdt.id } ) }}" onclick="return confirm('Etes vous sur de vouloir supprimer ce produit ?'); class="test text-danger"><i class="fas fa-trash"></i></a></td>
                     
         </tr>
         {% endfor %}
