--- a/site_perso/css/style.css
+++ b/site_perso/css/style.css
@@ -12,6 +12,7 @@ body{
     background-size: cover;   
     position: relative;
     padding: 0;
+    box-shadow: 2px 2px 5px;
     
     
 }
@@ -79,7 +80,8 @@ footer{
     position: relative;
     margin: 20px;
     overflow: hidden;
-    border: solid 9px hsl(51, 100%, 35%);
+    border: solid 4px hsl(51, 100%, 35%);
+    box-shadow: 2px 2px 5px;
   }
   .tile-image {
     display: block;
@@ -127,7 +129,7 @@ footer{
 
   /* slider 3D */
   .connexion{    
-    background: url(../images/image_header.jpg);   
+    background: url(../images/background.jpg);   
     background-size: cover;
     height: 90vh;
     padding-top: 5rem
@@ -136,7 +138,30 @@ footer{
   .btn{
     background: rgb(255, 145, 0);
     border:rgb(172, 99, 5);
-    box-shadow: 2px 2px 5px grey; 
+    box-shadow: 2px 2px 5px grey;
+    margin-bottom: 3rem; 
+  }
+  .inscription{
+    background: url(../images/background.jpg);
+    background-size: cover;
+    height: 90vh;
+  }
+  .form_connexion{
+    border: 1px solid grey;
+    background: rgba(0, 0, 0, 0.4);
+    box-shadow: 2px 2px 5px grey;
+  }
+  h1{
+    font-style: italic; 
+    color: hsl(51, 100%, 35%);
+    /* font-family: inherit;  */
+  }
+  .titre-connexion{
+    font-weight: bolder;
+    color: hsl(180, 11%, 95%);
+  }
+  .label{
+    font-weight: bold;
   }
 
   
